--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -14,13 +14,34 @@
       height: 100px;
       background-color: #253141;
       display: flex;
+      align-items: center;
       .top-items {
-        background-color: #d8d8d8;
         height: 20px;
         width: 260px;
         margin-left: 20px;
         margin-right: 20px;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
+        &__name {
+          color: #ffffff;
+          font-weight: bold;
+        }
+        &__icons {
+          width: 60px;
+          height: 20px;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+          &--btn{
+            color: #ffffff;
+            text-decoration: none;
+            &--icon{
+              margin-left: 5px;
+            }
+            
+          }
+        }
       }
     }
     .side-bar__group-list {
