--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,3 +9,18 @@
         = link_to "#", class: "top-items__icons--btn" do
           = icon('fas', 'cog',  class: "top-items__icons--btn--icon")
   .side-bar__group-list
+    .group-list
+      .group-list__name
+        グループone
+      .group-list__message
+        まだメッセージがありません
+    .group-list
+      .group-list__name
+        グループtwo
+      .group-list__message
+        やはりメッセージはありません
+    .group-list
+      .group-list__name
+        グループthree
+      .group-list__message
+        もうメッセージはきません
