--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   display: flex;
   .side-bar {
+    @include whitebold();
     width: 300px;
     height: 100vh;
     background-color: #253141;
@@ -156,7 +157,12 @@
             display: block;
             position: absolute;
             right: 10px;
-            line-height: 50px;
+            display: flex;
+            align-items: center;
+            .far {
+              font-size: 25px;
+              display: block;
+            }
             .image-icon {
               display: none;
             }
