--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,12 +1,12 @@
 .side-bar
   .side-bar__user-name
     .top-items
-      .top-items__name
-        でいす！西川
+      %h3.top-items__name
+        = current_user.name
       .top-items__icons
         = link_to "#", class: "top-items__icons--btn" do
           = icon('fas', 'edit',  class: "top-items__icons--btn--icon")
-        = link_to "#", class: "top-items__icons--btn" do
+        = link_to edit_user_path(current_user), class: "top-items__icons--btn" do
           = icon('fas', 'cog',  class: "top-items__icons--btn--icon")
   .side-bar__group-list
     .group-list
