--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -7,35 +7,13 @@
         Member : でいす！西川　What's up なべ
     = link_to "Edit", "#", class: "chat-header__edit-btn"
   .chat-main__message-list
-    .chat-message
-      .chat-message-top
-        .chat-message-top__name
-          でいす！西川
-        .chat-message-top__date
-          　2020年07月22日 14時58分
-      .chat-message-text
-        これはテスト。これはテスト。これはテスト。
-    .chat-message
-      .chat-message-top
-        .chat-message-top__name
-          でいす！西川
-        .chat-message-top__date
-          　2020年07月22日 14時58分
-      .chat-message-text
-        これはテスト。これはテスト。これはテスト。
-    .chat-message
-      .chat-message-top
-        .chat-message-top__name
-          でいす！西川
-        .chat-message-top__date
-          　2020年07月22日 14時58分
-      .chat-message-text
-        これはテスト。これはテスト。これはテスト。
+    = render @messages
+
   .chat-main__message-form
-    = form_with class: "chat-form" do |form|
+    = form_with model: [@group, @message], html: {class: "Form"}, local: true, class: "chat-form" do |form|
       .chat-form__box
-        = form.text_field :text, placeholder: "type a message", class: "chat-form__box-text"
-        %label{for: "image-icon",class: "chat-form__box-image"}
+        = form.text_field :content, placeholder: "type a message", class: "chat-form__box-text"
+        = form.label :image, class: "chat-form__box-image" do
           = icon('far', 'image')
-          = form.file_field :file, id: "image-icon", class: "image-icon"
+          = form.file_field :file, class: "image-icon"
       = form.submit value: "Send", class: "chat-form__btn"
