--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -4,7 +4,8 @@
       = message.user.name
     .chat-message-top__date
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  - if message.content.present?
-    %p.chat-message-text
-      = message.content
-    = image_tag message.image.url, class: 'Message__image' if message.image.present?
+  .chat-message-bottom
+    - if message.content.present?
+      %p.chat-message-bottom__content
+        = message.content
+    = image_tag message.image.url, class: 'chat-message-bottom__image' if message.image.present?
