--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -118,57 +118,57 @@
           &__date {
             color: #999999;
             font-size: 12px;
+            padding-left: 10px;
           }
         }
-        &-text {
-          color: #434a54;
-          font-size: 14px;
+        &-bottom {
+          &__content{
+            color: #434a54;
+            font-size: 14px;
+          }
+          &__image{
+            height: 300px;
+          }
         }
       }
     }
-    .chat-main__message-form {
+    .Footer {
       height: 90px;
       background-color: #d2d2d2;
-      .chat-form {
-        padding: 20px 40px 20px 40px;
+      padding: 20px 40px 20px 40px;
+      .Form {
         display: flex;
         justify-content: space-between;
-        &__box {
+        &__contents {
           width: 100%;
           background-color: #ffffff;
-          display: flex;
-          align-items: center;
           position: relative;
-          &-text {
+          .Form__inputContent {
+            border: none;
             height: 50px;
             width: 100%;
-            border: none;
-            padding-left: 10px;
+            padding: 0 45px 0 15px;
           }
-          &-image {
-            display: block;
+          .Form__inputImage {height: 50px;
             position: absolute;
             right: 10px;
-            display: flex;
-            align-items: center;
-            .far {
+            .Form__icon {
+              line-height: 50px;
               font-size: 25px;
-              display: block;
             }
-            .image-icon {
+            .Hidden {
               display: none;
             }
           }
         }
-        &__btn {
-          padding: 0 30px;
-          height: 50px;
-          background-color: #38aef0;
-          color: #fff;
-          font-size: 16px;
-          line-height: 50px;
+        &__submit {
+          background-color: #38AEF0;
           border: none;
+          color: #ffffff;
+          font-size: 16px;
+          height: 50px;
           margin-left: 15px;
+          padding: 0 30px;
         }
       }
     }
