--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,4 +15,4 @@
           .group-list__name
             = group.name
           .group-list__message
-            まだメッセージがありません
+            = group.show_last_message
