--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -104,6 +104,7 @@
     .chat-main__message-list {
       height: calc(100vh - 100px - 90px);
       background-color: #fafafa;
+      overflow: scroll;
       .chat-message {
         padding: 35px 0 0 40px;
         margin-bottom: calc(46px - 35px);
