--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       %h3.top-items__name
         = current_user.name
       .top-items__icons
-        = link_to new_group_path(current_user), class: "top-items__icons--btn" do
+        = link_to new_group_path, class: "top-items__icons--btn" do
           = icon('fas', 'edit',  class: "top-items__icons--btn--icon")
         = link_to edit_user_path(current_user), class: "top-items__icons--btn" do
           = icon('fas', 'cog',  class: "top-items__icons--btn--icon")
