--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat-message
+.chat-message{data: {message: {id: message.id}}}
   .chat-message-top
     .chat-message-top__name
       = message.user.name
